tests/238_Tutorial_imagickComposite_basic.out
Fatal error: Uncaught exception 'ImagickException' with message 'Can not process empty Imagick object' in /home/github/mkoppanen-imagick/tests/238_Tutorial_imagickComposite_basic.php:11
Stack trace:
#0 /home/github/mkoppanen-imagick/tests/238_Tutorial_imagickComposite_basic.php(11): Imagick->getimagewidth()
#1 /home/github/mkoppanen-imagick/tests/238_Tutorial_imagickComposite_basic.php(40): imagickComposite()
#2 {main}
  thrown in /home/github/mkoppanen-imagick/tests/238_Tutorial_imagickComposite_basic.php on line 11